2006-02-24  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-Stylus_CX3700.xml,
	  printer/Epson-Stylus_CX3810.xml,
	  printer/Epson-Stylus_CX3800.xml,
	  printer/Epson-Stylus_CX3805.xml,
	  printer/Epson-Stylus_DX3800.xml,
	  printer/Epson-Stylus_DX3850.xml,
	  printer/Epson-Stylus_CX5100.xml,
	  printer/Epson-Stylus_CX5300.xml,
	  printer/Epson-Stylus_CX5700.xml,
	  printer/Epson-Stylus_CX5800.xml,
	  printer/Epson-Stylus_CX6300.xml,
	  printer/Epson-Stylus_CX6500.xml,
	  printer/Epson-Stylus_CX6600.xml,
	  printer/Epson-Stylus_CX8300.xml,
	  printer/Epson-Stylus_CX8400.xml, printer/Epson-Stylus_D68.xml,
	  printer/Epson-Stylus_D88.xml,
	  printer/Epson-Stylus_Photo_935.xml,
	  printer/Epson-Stylus_Photo_R210.xml,
	  printer/Epson-Stylus_Photo_R220.xml,
	  printer/Epson-Stylus_Photo_R310.xml,
	  printer/Epson-Stylus_Photo_R320.xml,
	  printer/Epson-Stylus_Photo_R340.xml,
	  printer/Epson-Stylus_Photo_R2400.xml,
	  printer/Epson-Stylus_Photo_RX400.xml,
	  printer/Epson-Stylus_Photo_RX420.xml,
	  printer/Epson-Stylus_Photo_RX425.xml,
	  printer/Epson-Stylus_Photo_RX430.xml,
	  printer/Epson-Stylus_Photo_RX510.xml,
	  printer/Epson-Stylus_Photo_RX620.xml,
	  printer/Epson-Stylus_Photo_RX630.xml,
	  printer/Epson-Stylus_Photo_RX700.xml, printer/Epson-E_100.xml,
	  printer/Epson-EPL-5700PS.xml, printer/Epson-PM_940C.xml,
	  printer/Epson-PM_980C.xml, printer/Epson-PM_A900.xml,
	  printer/Epson-PM_D750.xml, printer/Epson-PM_D770.xml,
	  printer/Epson-PM_D1000.xml, printer/Epson-PM_G700.xml,
	  printer/Epson-PM_G720.xml, printer/Epson-PM_G800.xml,
	  printer/Epson-PM_G820.xml, printer/Epson-PX_5500.xml,
	  printer/Epson-PX_A650.xml, printer/Epson-PX_G900.xml,
	  printer/Epson-PX_G920.xml, printer/Epson-PX_G5000.xml,
	  printer/Epson-PX_V600.xml: New Epson printers and MF devices.

	* printer/Apple-Color_StyleWriter_4100.xml,
	  printer/Apple-Color_StyleWriter_4500.xml,
	  printer/Apple-Color_StyleWriter_6500.xml,