@@ -1,6 +1,6 @@
 <driver id="driver/chp2200">
  <name>chp2200</name>
- <url>http://hp.sourceforge.net/gs-hp2200.php</url>
+ <url>/download/printing/gs-hp2200.tar.bz2</url>
  <execution>
   <ghostscript />
   <prototype>gs -q -dBATCH -dPARANOIDSAFER -dQUIET -dNOPAUSE -sDEVICE=chp2200%A%Z -sOutputFile=- -</prototype>
@@ -14,6 +14,11 @@
     href="show_driver.cgi?driver=cdj880"&gt;cdj880&lt;/a&gt; drivers,
     with a new front-end to speak the different RGB-encoded PCL flavor
     used by these printers.&lt;p&gt;
+
+    The original source package is not provided any more on HP's web
+    sites. You can download it here from
+    linuxprinting.org. Installation instructions you find in the
+    package.&lt;p&gt;
 
     The provided source is for gs 6.01; it probably works against
     anything at all recent. It is also contained in ESP GhostScript
@@ -56,7 +61,22 @@ good as under Windows.</en>
    </comments>
   </printer>
   <printer>
+   <id>printer/HP-DesignJet_100</id>
+  </printer>
+  <printer>
    <id>printer/HP-DesignJet_100plus</id>
+  </printer>
+  <printer>
+   <id>printer/HP-DesignJet_500</id>
+  </printer>
+  <printer>
+   <id>printer/HP-DesignJet_800</id>
+  </printer>
+  <printer>
+   <id>printer/HP-DesignJet_5000</id>
+  </printer>
+  <printer>
+   <id>printer/HP-DesignJet_5500</id>
   </printer>
  </printers>
 </driver>
