@@ -97,7 +97,27 @@
      </constraint>
      <constraint sense="false">
       <driver>chp2200</driver>
+      <printer>printer/HP-DesignJet_100</printer>
+     </constraint>
+     <constraint sense="false">
+      <driver>chp2200</driver>
       <printer>printer/HP-DesignJet_100plus</printer>
+     </constraint>
+     <constraint sense="false">
+      <driver>chp2200</driver>
+      <printer>printer/HP-DesignJet_500</printer>
+     </constraint>
+     <constraint sense="false">
+      <driver>chp2200</driver>
+      <printer>printer/HP-DesignJet_800</printer>
+     </constraint>
+     <constraint sense="false">
+      <driver>chp2200</driver>
+      <printer>printer/HP-DesignJet_5000</printer>
+     </constraint>
+     <constraint sense="false">
+      <driver>chp2200</driver>
+      <printer>printer/HP-DesignJet_5500</printer>
      </constraint>
      <constraint sense="true">
       <driver>cdj970</driver>
