@@ -21,7 +21,37 @@
      </constraint>
      <constraint sense="true">
       <make>HP</make>
+      <model>DesignJet 100</model>
+      <driver>chp2200</driver>
+      <arg_defval>ev/largeformat-PageSize-Letter</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
       <model>DesignJet 100plus</model>
+      <driver>chp2200</driver>
+      <arg_defval>ev/largeformat-PageSize-Letter</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
+      <model>DesignJet 500</model>
+      <driver>chp2200</driver>
+      <arg_defval>ev/largeformat-PageSize-Letter</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
+      <model>DesignJet 800</model>
+      <driver>chp2200</driver>
+      <arg_defval>ev/largeformat-PageSize-Letter</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
+      <model>DesignJet 5000</model>
+      <driver>chp2200</driver>
+      <arg_defval>ev/largeformat-PageSize-Letter</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <make>HP</make>
+      <model>DesignJet 5500</model>
       <driver>chp2200</driver>
       <arg_defval>ev/largeformat-PageSize-Letter</arg_defval>
      </constraint>
