@@ -1,0 +1,73 @@
+<printer id="printer/HP-DesignJet_100">
+  <make>HP</make>
+  <model>DesignJet 100</model>
+  <mechanism>
+    <inkjet />
+    <color />
+    <resolution>
+      <dpi>
+        <x>600</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>
+
+          CMYK cartridges and printheads&lt;p&gt;
+
+          Cartridges (CMYK): c4836a c4837a c4838a c4840a&lt;p&gt;
+
+          Print heads (CMYK): c4811a c4812a c4813a c4810a&lt;p&gt;
+
+        </en>
+      </comments>
+      <!--one or more "partno" elements.-->
+    </consumables>
+  </mechanism>
+  <url>http://www.hp.com/</url>
+  <lang>
+    <proprietary/>
+    <pjl />
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>B</functionality>
+  <driver>chp2200</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+    
+    Large-format printer, A1+ max.&lt;p&gt;
+
+    Thanks to Albert Gonzalez (albert at imego2000 dot dyndns dot org) for
+    contrbuting this information. Here is his original report:&lt;p&gt;
+
+    &lt;i&gt;
+
+    At first tried with "pcl3", but it didn't work ok, appearing white
+    bands between head passes. Then, I contacted the "pcl3" developer,
+    Martin Lottermoser, whether it could be a bug in the
+    driver.&lt;p&gt;
+
+    Of course it wasn't a bug in the driver but is a bug in the
+    firmware.&lt;p&gt;
+ 
+    Anyway, he suggested me to try the "chp2200" driver, which i use
+    succesfully.&lt;p&gt;
+
+    The printer works very well, at 300x300 dpi and 600x600 dpi, full
+    colors.&lt;p&gt;
+ 
+    If you purchase it new, (as I did) check the quality of the black
+    printhead. Mine was faulty, and HP has sent a replacement. To a
+    friend of mine the same happened.&lt;p&gt;
+
+    &lt;/i&gt;
+
+    </en>
+  </comments>
+</printer>
