@@ -1,23 +1,31 @@
-<printer id="printer/HP-DesignJet_5500">
+<printer id="printer/HP-DesignJet_500">
   <make>HP</make>
-  <model>DesignJet 5500</model>
+  <model>DesignJet 500</model>
   <mechanism>
     <inkjet />
     <color />
     <resolution>
       <dpi>
-        <x>1200</x>
+        <x>600</x>
         <y>600</y>
       </dpi>
     </resolution>
     <consumables>
       <comments>
-        <en>6 cartridges (CMYcmK)</en>
+        <en>
+
+          CMYK cartridges and printheads&lt;p&gt;
+
+          Cartridges (CMYK): c4836a c4837a c4838a c4840a&lt;p&gt;
+
+          Print heads (CMYK): c4811a c4812a c4813a c4810a&lt;p&gt;
+
+        </en>
       </comments>
       <!--one or more "partno" elements.-->
     </consumables>
   </mechanism>
-  <url>http://h20022.www2.hp.com/busprod/specifications/0,12513,series=82218^type=18972^category=64182,00.html?lsidebarLayId=79&amp;rsidebarLayId=64</url>
+  <url>http://www.hp.com/</url>
   <lang>
     <proprietary/>
     <pjl />
@@ -32,23 +40,13 @@
   <!--no "contrib_url"-->
   <comments>
     <en>
-
-    Large-format 6-ink printer, 42 inches or 60 inches wide.&lt;p&gt;
+    
+    Large-format printer.&lt;p&gt;
 
     According to user reports compatible to the DesignJet 100,
     DesignJet 500, DesignJet 800, DesignJet 5000 and DesignJet 5500,
     because they all use the same Windows driver. But be careful, the
     DesignJet 120 uses a different Windows driver.&lt;p&gt;
-
-    There are also drivers for HP&apos;s RTL language under
-    developement in both the CUPS/CUPSDDK 1.2 and Gutenprint
-    projects.&lt;p&gt;
-
-    You can also send HP-GL/2 drawings and JPEG images directly to the
-    printer.&lt;p&gt;
-
-    There is also a more expensive PostScript version which is
-    probably the better choice for use with free software.&lt;p&gt;
 
     </en>
   </comments>
