@@ -1,3 +1,12 @@
+2006-02-25  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/HP-DesignJet_100.xml, printer/HP-DesignJet_500.xml,
+	  printer/HP-DesignJet_800.xml, printer/HP-DesignJet_5000.xml,
+	  printer/HP-DesignJet_5500.xml, driver/chp2200.xml,
+	  opt/largeformat-PageSize.xml, opt/2.xml: Added HP DesignJet 100,
+	  500, 800, and 5000, marked HP DesignJet as working with the
+	  "chp2200" driver.
+
 2006-02-24  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Epson-Stylus_CX3700.xml,
